# django-multisite-plus

./: .gitignore  CHANGELOG.rst  LICENSE  MANIFEST.in  PKG-INFO  README.md  addon.json  aldryn_config.py  pyproject.toml  setup.cfg  setup.py  tox.ini
django_multisite_plus/: __init__.py  admin.py  apps.py  cli.py  cms_urls.py  conf.py  fastrouter_lookup.py  middlewares.py  models.py
django_multisite_plus/migrations/: 0001_initial.py
src/django_multisite_plus/: __init__.py  admin.py  apps.py  cli.py  cms_urls.py  conf.py  constants.py  fastrouter_lookup.py  middlewares.py  models.py  utils.py
src/django_multisite_plus/management/commands/: multisite_plus_populate_sites.py  multisite_plus_rewrite_domains.py
src/django_multisite_plus/migrations/: 0001_initial.py  0002_auto_20180125_1157.py
tests/: conftest.py  test_admin.py  test_apps.py  test_cli.py  test_commands.py  test_conf.py  test_fastrouter_lookup.py  test_middleware.py  test_models.py
tests/testproject/: settings.py
