[build-system]
requires = [
    "setuptools>=42",
    "setuptools_scm[toml]>=6.2",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.coverage.run]
branch = true
source = ["src/django_multisite_plus", "./tests"]
data_file = ".artifacts/coverage"

[tool.coverage.paths]
source = [
    "src",
    "~/.toxenvs/django-multisite-plus/*/lib*/python*/site-packages",
]

[tool.coverage.report]
precision = 1
skip_covered = true

[tool.coverage.html]
directory = ".artifacts/htmlcov"
show_contexts = true
skip_covered = false

[tool.pytest.ini_options]
pythonpath = "./tests"
addopts = "-rxs --import-mode=importlib --cov-report= --cov=django_multisite_plus --cov=tests --cov-context=test"

[tool.isort]
profile = "black"
line_length = 79
lines_after_imports = 2
lines_between_types = 0
include_trailing_comma = true
atomic = true
order_by_type = true
use_parentheses = true
multi_line_output = 3
overwrite_in_place = true
known_django = ["django"]
sections = ["FUTURE", "STDLIB", "DJANGO", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.setuptools_scm]
