[metadata]
name = django-multisite-plus
version = 0.7.1
author = Divio AG
author_email = info@divio.com
license = BSD 3-Clause License
description = An extension to django-multisite that eases local development.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/divio/django-multisite-plus
project_urls =
    Bug Tracker = https://github.com/divio/django-multisite-plus/issues
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    django>=2
    django-multisite>=1.4.0
    djangocms-multisite>=0.2.2  # Note: this is divio/djangocms-multisite, not nephila/djangocms-multisite
    aldryn-django
    aldryn_addons
    click
    psycopg2>=2.5
    yurl

[options.entry_points]
console_scripts =
    django-multisite-plus = django_multisite_plus.cli:main

[options.packages.find]
where = src
